--- a/date07.css
+++ b/date07.css
@@ -1,4 +1,4 @@
-.container1{
+.preloader {
     padding: auto;
     margin: auto;
     height: 100px;
@@ -37,14 +37,14 @@
 }
 
 .Box img{
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     object-fit: cover;
-    transition: all ease 1s;
+    transition: all ease 0.3s;
     border: 2px solid black;
 }
 .Box:hover img{
-    scale: 1.9;
+    scale: 1.3;
 }
 
 
@@ -57,16 +57,31 @@
     justify-content: center;
 }
 
-button{
+.btn {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
     font-size: 20px;
     font-weight: 600;
-    border-radius: 9px;
-    background-color: lightgreen;
-    color: black;
-    padding: 12px 20px;
+    margin-top: 20px;
+    /* margin-right: auto;
+    margin-left: auto; */
+    display: flex;
+    justify-content: center;
+    display: inline-block;
+}
+
+.btn:hover{
+    box-shadow: 5px 5px 0px black;
     transition: all ease 0.4s;
 }
 
-button:hover{
-    box-shadow: 5px 5px 0px black;
+.divbtn{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
 }
+
