--- a/date09.css
+++ b/date09.css
@@ -57,8 +57,8 @@ body {
   color: coral;
   font-size: 30px;
   font-weight: 600;
-  /* animation-iteration-count: infinite; */
-  /* animation-direction: alternate; */
+  animation-iteration-count: infinite; */
+  animation-direction: alternate;
 }
 
 @keyframes slideIn {
@@ -76,7 +76,7 @@ body {
 /*3rd section*/
 
 .animation {
-  /* animation: pulse 1s linear infinite; */
+   animation: pulse 1s linear infinite; 
   background-color: purple;
   margin: 20px;
 }
@@ -133,13 +133,13 @@ body {
 }
 
 .sun {
-  animation: 0.4s linear 3s  alternate sun-rise;
+  animation: 0.4s linear 3s  infinite alternate sun-rise;
 } 
 
 
 #motion-demo {
   offset-path: path("M 10 45 L 60 45 L 61 0 L 61 0 L 10 1 M 10 1 L 10 1 L 10 45");
-  animation: move 3000ms  alternate ease-in-out;
+  animation: move 3000ms infinite alternate ease-in-out;
   width: 40px;
   height: 40px;
   background: cyan;
